--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 
-<Layout title="AdityaRedflag">
+<Layout title="adityaREDFLAG">
   <main class="flex justify-center h-screen place-items-center px-4">
     <div>
                   <marquee class="border-r-2 border-l-2  border-neutral-800" behavior="loop" direction="right">  <img src="/public/rickyy.gif" height="100" width="100" alt="Rick Roll" /></marquee>
@@ -17,12 +17,12 @@ import Layout from "../layouts/Layout.astro";
           >
         </span>
         <div class="text-gray-400 text-4xl mt-10 flex flex-row space-x-4 justify-center border-t pt-10 border-neutral-800">
-          <a class="hover:text-gray-300 duration-75" href="" target="_blank" rel="noreferrer">Youtube</a>
-          <a class="hover:text-gray-300 duration-75" href="">Roblox</a>
-          <a class="hover:text-gray-300 duration-75" href="">Twitter</a>
-          <a class="hover:text-gray-300 duration-75" href="">Github</a>
-          <a class="hover:text-gray-300 duration-75" href="">Discord</a>
-          <a class="hover:text-gray-300 duration-75" href="">Instagram</a>
+          <a class="hover:text-gray-300 duration-75" href="https://youtube.com/adityaredflag" target="_blank" rel="noreferrer">Youtube</a>
+          <a class="hover:text-gray-300 duration-75" href="https://www.roblox.com/users/3507400125/profile">Roblox</a>
+          <a class="hover:text-gray-300 duration-75" href="https://twitter.com/adityaREDFLAG">Twitter</a>
+          <a class="hover:text-gray-300 duration-75" href="https://github.com/adityaREDFLAG">Github</a>
+          <a class="hover:text-gray-300 duration-75" href="https://discord.com/invite/N9KD7au6hB">Discord</a>
+          <a class="hover:text-gray-300 duration-75" href="https://www.instagram.com/adityaREDFLAG_yt/">Instagram</a>
           <a class="hover:text-gray-300 duration-75" href="">Mail</a>
         </div>
       </div>
