--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Layout from "../layouts/Layout.astro";
           <a class="hover:text-gray-300 duration-75" href="https://github.com/adityaREDFLAG">Github</a>
           <a class="hover:text-gray-300 duration-75" href="https://discord.com/invite/N9KD7au6hB">Discord</a>
           <a class="hover:text-gray-300 duration-75" href="https://www.instagram.com/adityaREDFLAG_yt/">Instagram</a>
-          <a class="hover:text-gray-300 duration-75" href="">Mail</a>
+          <a class="hover:text-gray-300 duration-75" href="mailto:adi.redflag@gmail.com">Mail</a>
         </div>
       </div>
     </div>
