--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import Layout from "../layouts/Layout.astro";
     <div>
                   <marquee class="border-r-2 border-l-2  border-neutral-800" behavior="loop" direction="right">  <img src="/public/rickyy.gif" height="100" width="100" alt="Rick Roll" /></marquee>
 
-      <h1 class="text-center text-7xl font-semibold mb-10"><span class="text-gray-300">Aditya</span>
-<span class="text-red-400">RedFlag</span>
+      <h1 class="text-center text-7xl font-semibold mb-10"><span class="text-gray-300">aditya</span>
+<span class="text-red-400">REDFLAG</span>
       </h1>
       <div class="instructions bg-neutral-900 max-w-3xl border-neutral-800 border ">
         <span class="text-gray-600">
