--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="adityaREDFLAG">
   <main class="flex justify-center h-screen place-items-center px-4">
     <div>
-                  <marquee class="border-r-2 border-l-2  border-neutral-800" behavior="loop" direction="right">  <img src="/public/rickyy.gif" height="100" width="100" alt="Rick Roll" /></marquee>
+                  <marquee class="border-r-2 border-l-2  border-neutral-800" behavior="loop" direction="right">  <img src="/public/rick.gif" height="100" width="100" alt="Nermal" /></marquee>
 
       <h1 class="text-center text-7xl font-semibold mb-10"><span class="text-gray-300">aditya</span>
 <span class="text-red-400">REDFLAG</span>
