--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 
-<Layout title="adityaREDFLAG">
+<Layout title="noblixzy">
   <main class="flex justify-center h-screen place-items-center px-4">
     <div>
                   
@@ -13,11 +13,11 @@ import Layout from "../layouts/Layout.astro";
       </h1>
       <div class="instructions bg-neutral-900 max-w-3xl border-neutral-800 border ">
         <span class="text-gray-600">
- <span class="block text-lg font-bold text-gray-200"><code class="block mt-2">Ahoy! I am Aditya, and I am a Roblox YouTuber and a discord bot dev who loves using aoi.js. I was born in Israel 🇮🇱 but I am from India 🇮🇳.</code></span
+ <span class="block text-lg font-bold text-gray-200"><code class="block mt-2">Ahoy! My name is noblixzy and I am a youtuber and a discord bot dev who uses aoi.js </code></span
           >
         </span>
         <div class="text-gray-400 text-4xl mt-10 flex flex-row space-x-4 justify-center border-t pt-10 border-neutral-800">
-          <a class="hover:text-gray-300 duration-75" href="https://youtube.com/adityaredflag" target="_blank" rel="noreferrer">Youtube</a>
+          <a class="hover:text-gray-300 duration-75" href="https://youtube.com/@noblixzy" target="_blank" rel="noreferrer">Youtube</a>
           <a class="hover:text-gray-300 duration-75" href="https://www.roblox.com/users/3507400125/profile">Roblox</a>
           <a class="hover:text-gray-300 duration-75" href="https://twitter.com/adityaREDFLAG">Twitter</a>
           <a class="hover:text-gray-300 duration-75" href="https://github.com/adityaREDFLAG">Github</a>
