--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
                   
 
       <h1 class="text-center text-7xl font-semibold mb-10"><span class="text-gray-300">Nobli</span>
-<span class="text-red-400">xyz</span>
+<span class="text-red-400">xzy</span>
       </h1>
       <div class="instructions bg-neutral-900 max-w-3xl border-neutral-800 border ">
         <span class="text-gray-600">
@@ -22,7 +22,7 @@ import Layout from "../layouts/Layout.astro";
           <a class="hover:text-gray-300 duration-75" href="https://twitter.com/adityaREDFLAG">Twitter</a>
           <a class="hover:text-gray-300 duration-75" href="https://github.com/adityaREDFLAG">Github</a>
           <a class="hover:text-gray-300 duration-75" href="https://discord.com/invite/N9KD7au6hB">Discord</a>
-          <a class="hover:text-gray-300 duration-75" href="https://www.instagram.com/realnoblixzy/">Instagram</a>
+          <a class="hover:text-gray-300 duration-75" href="https://www.instagram.com/noblixzy/">Instagram</a>
           <a class="hover:text-gray-300 duration-75" href="mailto:adi.redflag@gmail.com">Mail</a>
         </div>
       </div>
