--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,16 +10,15 @@ import Layout from "../layouts/Layout.astro";
 
       <h1 class="text-center text-7xl font-semibold mb-10"><span class="text-gray-300">Nobli</span>
 <span class="text-red-400">xzy</span>
-      </h1>
+    
+</h1>
       <div class="instructions bg-neutral-900 max-w-3xl border-neutral-800 border ">
         <span class="text-gray-600">
  <span class="block text-lg font-bold text-gray-200"><code class="block mt-2">Ahoy! My name is noblixzy and I am a youtuber and a discord bot dev who uses aoi.js </code></span
           >
         </span>
         <div class="text-gray-400 text-4xl mt-10 flex flex-row space-x-4 justify-center border-t pt-10 border-neutral-800">
-          <a class="hover:text-gray-300 duration-75" href="https://youtube.com/@noblixzy" target="_blank">
-  <img src="/public/youtube.png" />
-</a>
+          <a href="https://youtube.com/@noblixzy" target="_blank"><img src="../public/youtube.png/" /></a>
           <a class="hover:text-gray-300 duration-75" href="https://www.roblox.com/users/3507400125/profile">Roblox</a>
           <a class="hover:text-gray-300 duration-75" href="https://twitter.com/adityaREDFLAG">Twitter</a>
           <a class="hover:text-gray-300 duration-75" href="https://github.com/adityaREDFLAG">Github</a>
