--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,7 @@ import Layout from "../layouts/Layout.astro";
           >
         </span>
         <div class="text-gray-400 text-4xl mt-10 flex flex-row space-x-4 justify-center border-t pt-10 border-neutral-800">
-           <a href="youtube.com/@adityaredflag" target="_blank">
-<img src="./youtube.png" />
-</a>
+           <a class="hover:text-gray-300 duration-75" href="https://youtube.com/@adityaredflag">Youtube</a>
           <a class="hover:text-gray-300 duration-75" href="https://www.roblox.com/users/3507400125/profile">Roblox</a>
           <a class="hover:text-gray-300 duration-75" href="https://twitter.com/adityaREDFLAG">Twitter</a>
           <a class="hover:text-gray-300 duration-75" href="https://github.com/adityaREDFLAG">Github</a>
