--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,16 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="noblixzy">
+<Layout title="Aditya">
   <main class="flex justify-center h-screen items-center px-4 bg-black">
     <div class="text-center">
       <h1 class="text-7xl font-bold mb-10">
-        <span class="text-gray-300 nermy">Nobli</span><span class="text-red-400 nermy">xzy</span>
+        <span class="text-gray-300 nermy">Adi</span><span class="text-red-400 nermy">tya</span>
       </h1>
       
       <div class="instructions bg-neutral-900 max-w-3xl border border-neutral-800 shadow-lg">
         <p class="text-lg font-bold text-gray-200 mt-4">
-          Ahoy! My name is noblixzy and I am a YouTuber and a Discord bot developer using aoi.js.
+          Hello, I am Aditya!
         </p>
         
         <div class="text-gray-400 text-2xl mt-8 flex flex-wrap justify-center space-x-4 border-t border-neutral-800 pt-6">
@@ -20,7 +20,7 @@ import Layout from "../layouts/Layout.astro";
           <a class="hover:text-gray-300 transition duration-150" href="https://twitter.com/adityaREDFLAG">Twitter</a>
           <a class="hover:text-gray-300 transition duration-150" href="https://github.com/adityaREDFLAG">GitHub</a>
           <a class="hover:text-gray-300 transition duration-150" href="https://discord.com/invite/N9KD7au6hB">Discord</a>
-          <a class="hover:text-gray-300 transition duration-150" href="https://www.instagram.com/noblixzy/">Instagram</a>
+          <a class="hover:text-gray-300 transition duration-150" href="https://www.instagram.com/imreallyadi/">Instagram</a>
           <a class="hover:text-gray-300 transition duration-150" href="mailto:adi.redflag@gmail.com">Mail</a>
         </div>
       </div>
